--- a/src/scss/layout/_team.scss
+++ b/src/scss/layout/_team.scss
@@ -6,7 +6,7 @@
   opacity: 0.8;
   font-size: 18px;
   font-weight: 600;
-  font-family: open sans;
+  font-family: 'Open Sans', sans-serif;
   z-index: 999;
   line-height: 1.5;
   position: relative;
@@ -31,7 +31,7 @@
 
 .equipo-titulo {
   color: #14d9c4;
-  font-family: Rubik Mediana, sans-serif;
+  font-family: 'Rubik', sans-serif;
   text-transform: uppercase;
   height: 45px;
   font-size: 24px;
@@ -41,7 +41,7 @@
 
 .equipo-parrafo {
   color: #54585a;
-  font-family: Open Sans;
+  font-family: 'Open Sans', sans-serif;
   line-height: 1.5;
   font-size: 16px;
   padding: 5px;
@@ -72,7 +72,7 @@
 }
 
 .fortalezas-titulo {
-  font-family: Rubik Mediana, sans-serif;
+  font-family: 'Rubik', sans-serif;
   color: #099d8d;
   height: 45px;
   font-size: 24px;
@@ -81,7 +81,7 @@
 
 .fortalezas-debilidades-parrafo {
   color: #54585a;
-  font-family: open sans;
+  font-family: 'Open Sans', sans-serif;
   line-height: 1.5;
   font-size: 16px;
   padding: 5px;
@@ -89,7 +89,7 @@
 
 .debilidades-titulo {
   color: #099d8d;
-  font-family: Rubik Mediana, sans-serif;
+  font-family: 'Rubik', sans-serif;
   height: 45px;
   font-size: 24px;
   font-weight: 600;
