--- a/src/scss/layout/_header.scss
+++ b/src/scss/layout/_header.scss
@@ -17,7 +17,7 @@
   justify-content: center;
   padding-top: 16px;
   padding-bottom: 16px;
-  font-family: Rubik Mediana, sans-serif;
+  font-family: "Rubik", sans-serif;
 }
 
 .itemMenu a {
@@ -45,7 +45,7 @@ header {
   margin-left: 18px;
   margin-right: 18px;
   text-transform: uppercase;
-  font-family: Rubik Mediana, sans-serif;
+  font-family: "Rubik", sans-serif;
 }
 
 .imagen1 {
