--- a/src/scss/layout/_whoweare.scss
+++ b/src/scss/layout/_whoweare.scss
@@ -1,6 +1,6 @@
 .whoweare {
   background: white;
-  font-family: OpenSans-Regular, sans-serif;
+  font-family: "Open Sans", sans-serif;
   font-size: 16px;
   margin: auto;
   max-width: 600px;
@@ -17,7 +17,7 @@
   }
 }
 .whoweare h2 {
-  font-family: Rubik Mediana, sans-serif;
+  font-family: "Rubik", sans-serif;
   font-weight: bold;
   font-size: 24px;
   color: #099d8d;
@@ -63,7 +63,7 @@
   }
 
   .name {
-    font-family: Rubik Mediana, sans-serif;
+    font-family: "Rubik", sans-serif;
     font-size: 20px;
     text-align: center;
     display: inline-block;
@@ -146,7 +146,7 @@
   }
 
   .name {
-    font-family: Rubik Mediana, sans-serif;
+    font-family: "Rubik", sans-serif;
     font-size: 20px;
     text-align: center;
     display: inline-block;
