--- a/src/scss/layout/_form.scss
+++ b/src/scss/layout/_form.scss
@@ -25,9 +25,20 @@ main {
 
 .formulario {
   font-size: 14px;
-  width: 100vw;
+  width: 100%;
   height: 100vh;
   display: flex;
   flex-direction: column;
-  margin: 10px;
+  align-items: center;
+
+  &__label {
+    margin-left: 15px;
+
+    &--items {
+      display: block;
+      height: 45px;
+      width: 400px;
+      margin: 15px;
+    }
+  }
 }
