--- a/src/html/partials/form.html
+++ b/src/html/partials/form.html
@@ -27,14 +27,14 @@
     <fieldset class="formulario">
       <!--Nombre completo-->
       <label for="fullName" class="formulario__label">Nombre completo
-        <input class="formulario__label--items" placeholder="Nombre..." type="text" id="fullName"
-          name="fullName" /></label>
+        <input class="formulario__label--items" placeholder="Nombre..." type="text" id="fullName" name="fullName"
+          required /></label>
 
 
       <!--correo-->
       <label for="emailAddress" class="formulario__label">Email
         <input class="formulario__label--items" placeholder="nombre@gmail.com" type="email" id="emailAddress"
-          name="emailAddress" /></label>
+          name="emailAddress" required /></label>
 
       <!--telefono-->
       <label for="telephone" class="formulario__label">Teléfono
@@ -43,12 +43,12 @@
 
 
       <!--mensaje-->
-      <label for="comments" class="formulario__label">Comentarios:
-        <textarea class="formulario__label--items" placeholder="Qué necesitas?" id="comments" name="comments" rows="8"
-          cols="80"></textarea></label>
+      <label for="comments" class="formulario__label">Mensaje
+        <textarea class="formulario__label--items1" placeholder="¿Qué necesitas?" id="comments" name="comments" rows="8"
+          cols="80" required></textarea></label>
 
 
-      <input type="submit" value="Enviar" />
+      <input type="submit" value="Enviar" class="button" />
       <!--boton-->
     </fieldset>
   </form>
