--- a/src/html/partials/form.html
+++ b/src/html/partials/form.html
@@ -14,10 +14,9 @@
     <h2>Contacto</h2>
 
     <p>
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus, rem,
-      voluptatem nulla consectetur aperiam est eum ea sit exercitationem ratione
-      deleniti magnam. Totam beatae consequatur saepe reprehenderit, magnam modi
-      soluta.
+      ¿Necesitas ponerte en contacto con nosotros?
+      Puedes rellenar nuestro formulario online para enviar un mensaje a nuestro equipo.
+      Trataremos de responder a tu mensaje en un plazo de 2 días laborables.
     </p>
     <small>Todos los campos marcados con * son obligatorios</small>
   </section>
