--- a/src/html/partials/footer.html
+++ b/src/html/partials/footer.html
@@ -7,10 +7,10 @@
                     <a href="#team" alt="team" title="equipo1">Equipo</a>
                 </li>
                 <li class="itemfooter">
-                    <a href="#quienesSomos" alt="whoweare" title="equipo1">Quiénes somos</a>
+                    <a href="#quienesSomos" alt="whoweare" title="who">Quiénes somos</a>
                 </li>
                 <li class="itemfooter">
-                    <a href="../contact.html" alt="contacto" title="equipo1">Contacto</a>
+                    <a href="../contact.html" alt="contacto" title="contact">Contacto</a>
                 </li>
             </ul>
         </nav>
