--- a/src/html/partials/footer.html
+++ b/src/html/partials/footer.html
@@ -4,10 +4,10 @@
         <nav class="menufooter">
             <ul>
                 <li class="itemfooter">
-                    <a href="#team" alt="team" title="equipo1">Equipo</a>
+                    <a href="./index.html#team" alt="team" title="equipo1">Equipo</a>
                 </li>
                 <li class="itemfooter">
-                    <a href="#quienesSomos" alt="whoweare" title="who">Quiénes somos</a>
+                    <a href="./index.html#quienesSomos" alt="whoweare" title="who">Quiénes somos</a>
                 </li>
                 <li class="itemfooter">
                     <a href="../contact.html" alt="contacto" title="contact">Contacto</a>
