--- a/src/html/partials/header.html
+++ b/src/html/partials/header.html
@@ -1,29 +1,30 @@
 <header>
-  <div class="cabecera">
-    <h1 class="title"><strong>Divitis</strong></h1>
-    <nav class="nav1">
-      <ul class="menu">
-        <li class="itemMenu">
-          <a href="#team" alt="team" title="equipo1"><strong>Equipo</strong></a>
-        </li>
-        <li class="itemMenu">
-          <a href="#quienesSomos" alt="quienes" title="who"
-            ><strong>Quienes somos</strong></a
-          >
-        </li>
-        <li class="itemMenu">
-          <a href="contacto" alt="contact" title="contact"
-            ><strong>Contacto</strong></a
-          >
-        </li>
-      </ul>
-    </nav>
-  </div>
-  <div class="hero">
-    <img
-      class="imagen1"
-      src="./assets/images/planes-aguila.jpg"
-      alt="imagen temporal"
-    />
-  </div>
+    <div class="cabecera">
+        <h1 class="title"><strong>Divitis</strong></h1>
+        <nav class="nav1">
+            <ul class="menu">
+                <li class="itemMenu">
+                    <a href="./index.html#team" alt="team" title="equipo1"><strong>Equipo</strong></a
+					>
+				</li>
+				<li class="itemMenu">
+					<a href="./index.html#quienesSomos" alt="quienes" title="who"
+						><strong>Quienes somos</strong></a
+					>
+				</li>
+				<li class="itemMenu">
+					<a href="../contact.html" alt="contact" title="contact"
+						><strong>Contacto</strong></a
+					>
+				</li>
+			</ul>
+		</nav>
+	</div>
+	<div class="hero">
+		<img
+			class="imagen1"
+			src="./assets/images/planes-aguila.jpg"
+			alt="imagen temporal"
+		/>
+	</div>
 </header>
