--- a/src/html/partials/footer.html
+++ b/src/html/partials/footer.html
@@ -7,10 +7,11 @@
                     <a href="./index.html#team" alt="team" title="equipo1">Equipo</a>
                 </li>
                 <li class="itemfooter">
-                    <a href="./index.html#quienesSomos" alt="whoweare" title="who">Quiénes somos</a>
-                </li>
-                <li class="itemfooter">
-                    <a href="../contact.html" alt="contacto" title="contact">Contacto</a>
+                    <a href="./index.html#quienesSomos" alt="whoweare" title="who">Quiénes somos</a
+					>
+				</li>
+				<li class="itemfooter">
+					<a href="./contact.html" alt="contacto" title="contact">Contacto</a>
                 </li>
             </ul>
         </nav>
