--- a/src/html/partials/header.html
+++ b/src/html/partials/header.html
@@ -13,7 +13,7 @@
 					>
 				</li>
 				<li class="itemMenu">
-					<a href="../contact.html" alt="contact" title="contact"
+					<a href="./contact.html" alt="contact" title="contact"
 						><strong>Contacto</strong></a
 					>
 				</li>
