--- a/src/html/partials/whoweare.html
+++ b/src/html/partials/whoweare.html
@@ -11,9 +11,12 @@
         <div class="container-text">
             <h3 class="name">Paloma Arévalo </h3>
 
-            <p class="wwa-parrafo"> Paloma es una mujer en proceso de reinvención. Tras años en el sector turístico online ha decidido lanzarse al desarrollo web para tener una visión global. Curiosa y constante, no se rinde hasta encontrar la solución óptima.</p>
+            <p class="wwa-parrafo"> Paloma es una mujer en proceso de reinvención. Tras años en el sector turístico
+                online ha decidido lanzarse al desarrollo web para tener una visión global. Curiosa y constante, no se
+                rinde hasta encontrar la solución óptima.</p>
             <div class="rrss-icons">
-                <div class="icon"><a href="https://twitter.com/?lang=en" target="_BLANK"><i class="fab fa-twitter"></i></a></div>·
+                <div class="icon"><a href="https://twitter.com/?lang=en" target="_BLANK"><i
+                            class="fab fa-twitter"></i></a></div>·
                 <div class="icon">
                     <a href="">
                         <a href="http://www.linkedin.com/in/paloma-arevalo-gonzalez" target="_BLANK">
@@ -21,8 +24,10 @@
                         </a>
                     </a>
                 </div>·
-                <div class="icon"><a href="https://github.com/PalomaArevaloG" target="_BLANK"><i class="fab fa-github-alt"></i></a></div>·
-                <div class="icon"><a href="mailto:paloma.arevalog@gmail.com" traget="_BLANK"><i class="fas fa-envelope"></i></a>
+                <div class="icon"><a href="https://github.com/PalomaArevaloG" target="_BLANK"><i
+                            class="fab fa-github-alt"></i></a></div>·
+                <div class="icon"><a href="mailto:paloma.arevalog@gmail.com" traget="_BLANK"><i
+                            class="fas fa-envelope"></i></a>
                 </div>
             </div>
 
@@ -45,10 +50,13 @@
 
 
 
-            <p class="wwa-parrafo"> Dedicada toda su vida al negocio familiar, encontró su vocación fundando una organización juvenil. Ser programadora es el primer paso en el largo camino a recorrer para cambiar su futuro profesional y dedicarse a lo que realmente le apasiona.
+            <p class="wwa-parrafo"> Dedicada toda su vida al negocio familiar, encontró su vocación fundando una
+                organización juvenil. Ser programadora es el primer paso en el largo camino a recorrer para cambiar su
+                futuro profesional y dedicarse a lo que realmente le apasiona.
             </p>
             <div class="rrss-icons">
-                <div class="icon"><a href="https://twitter.com/?lang=en" target="_BLANK"><i class="fab fa-twitter"></i></a></div>·
+                <div class="icon"><a href="https://twitter.com/?lang=en" target="_BLANK"><i
+                            class="fab fa-twitter"></i></a></div>·
                 <div class="icon">
                     <a href="">
                         <a href="https://www.linkedin.com/login" target="_BLANK">
@@ -56,8 +64,10 @@
                         </a>
                     </a>
                 </div>·
-                <div class="icon"><a href="https://github.com/" target="_BLANK"><i class="fab fa-github-alt"></i></a></div>·
-                <div class="icon"><a href="mailto:elcorreoquequieres@correo.com" target="_BLANK"><i class="fas fa-envelope"></i></a>
+                <div class="icon"><a href="https://github.com/" target="_BLANK"><i class="fab fa-github-alt"></i></a>
+                </div>·
+                <div class="icon"><a href="mailto:elcorreoquequieres@correo.com" target="_BLANK"><i
+                            class="fas fa-envelope"></i></a>
                 </div>
             </div>
 
@@ -67,15 +77,18 @@
     </article>
 
     <article class="adalaber-impar">
-        <img src="./assets/images/foto-claudia.jpg" alt="imagen" class="image-adalaber">
+        <img src="./assets/images/foto-gabi.jpg" alt="imagen" class="image-adalaber">
 
         <div class="container-text">
             <h3 class="name">Gabriela Gil</h3>
 
-            <p class="wwa-parrafo">Es paciente pero tenaz y le permite luchar por los objetivos que se marca, es persiste hasta alcanzarlo. Es observadora y esto le hace ser práctica a la hora de resolver problemas que se presentan en su día a día. Es una luchadora.
+            <p class="wwa-parrafo">Es paciente pero tenaz y le permite luchar por los objetivos que se marca, es
+                persiste hasta alcanzarlo. Es observadora y esto le hace ser práctica a la hora de resolver problemas
+                que se presentan en su día a día. Es una luchadora.
             </p>
             <div class="rrss-icons">
-                <div class="icon"><a href="https://twitter.com/?lang=en" target="_BLANK"><i class="fab fa-twitter"></i></a></div>·
+                <div class="icon"><a href="https://twitter.com/?lang=en" target="_BLANK"><i
+                            class="fab fa-twitter"></i></a></div>·
                 <div class="icon">
                     <a href="">
                         <a href="">
@@ -83,7 +96,8 @@
                         </a>
                     </a>
                 </div>·
-                <div class="icon"><a href="https://github.com/" target="_BLANK"><i class="fab fa-github-alt"></i></a></div>·
+                <div class="icon"><a href="https://github.com/" target="_BLANK"><i class="fab fa-github-alt"></i></a>
+                </div>·
                 <div class="icon"><a href="mailto:elcorreoquequieres@correo.com"><i class="fas fa-envelope"></i></a>
                 </div>
             </div>
@@ -99,10 +113,13 @@
         <div class="container-text">
             <h3 class="name">María Molina </h3>
 
-            <p class="wwa-parrafo"> Lorem, ipsum dolor sit amet consectetur adipisicing elit. Vero, impedit esse asperiores blanditiis distinctio excepturi quasi ea, obcaecati, aliquam consequatur ab eaque nesciunt illum! Dicta cumque animi illo enim totam?
+            <p class="wwa-parrafo"> Lorem, ipsum dolor sit amet consectetur adipisicing elit. Vero, impedit esse
+                asperiores blanditiis distinctio excepturi quasi ea, obcaecati, aliquam consequatur ab eaque nesciunt
+                illum! Dicta cumque animi illo enim totam?
             </p>
             <div class="rrss-icons">
-                <div class="icon"><a href="https://twitter.com/?lang=en" target="_BLANK"><i class="fab fa-twitter"></i></a></div>·
+                <div class="icon"><a href="https://twitter.com/?lang=en" target="_BLANK"><i
+                            class="fab fa-twitter"></i></a></div>·
                 <div class="icon">
                     <a href="">
                         <a href="https://www.linkedin.com/login" target="_BLANK">
@@ -110,7 +127,8 @@
                         </a>
                     </a>
                 </div>·
-                <div class="icon"><a href="https://github.com/" target="_BLANK"><i class="fab fa-github-alt"></i></a></div>·
+                <div class="icon"><a href="https://github.com/" target="_BLANK"><i class="fab fa-github-alt"></i></a>
+                </div>·
                 <div class="icon"><a href="mailto:elcorreoquequieres@correo.com"><i class="fas fa-envelope"></i></a>
                 </div>
             </div>
