responsive for tablet

--- a/src/scss/layout/_form.scss
+++ b/src/scss/layout/_form.scss
@@ -1,78 +1,95 @@
 main {
-    font-family: "Open Sans", sans-serif;
-    font-size: 16px;
+  font-family: "Open Sans", sans-serif;
+  font-size: 16px;
 }
 
 .asterisk {
-    size: 14px;
-    color: aqua;
+  size: 14px;
+  color: aqua;
 }
 
 .contact {
+  text-align: center;
+  line-height: 24px;
+  margin-top: 30px;
+  h2 {
+    font-family: "Rubik", sans-serif;
+    font-weight: bold;
+    font-size: 24px;
+    color: #099d8d;
     text-align: center;
-    line-height: 24px;
-    margin-top: 30px;
-    h2 {
-        font-family: "Rubik", sans-serif;
-        font-weight: bold;
-        font-size: 24px;
-        color: #099d8d;
-        text-align: center;
-        text-transform: uppercase;
-    }
-    p {
-        margin: 15px;
-    }
-    small {
-        font-size: 12px;
-    }
+    text-transform: uppercase;
+  }
+  p {
+    margin: 15px;
+  }
+  small {
+    font-size: 12px;
+  }
 }
 
 .formulario {
-    font-size: 14px;
-    width: 100%;
-    height: 100%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    margin-top: 58px;
-    margin-bottom: 60px;
-    &__label {
-        padding-left: 15px;
-        line-height: 0.5;
-        color: #54585a;
-        &--items {
-            display: block;
-            height: 45px;
-            width: 400px;
-            margin: 15px 15px 20px 0px;
-            padding-left: 15px;
-            &::placeholder {
-                font-family: "Open Sans", sans-serif;
-            }
-        }
-        &--items1 {
-            display: block;
-            height: 105px;
-            width: 400px;
-            margin: 15px 15px 15px 0px;
-            padding-left: 15px;
-            padding-top: 11px;
-            &::placeholder {
-                font-family: "Open Sans", sans-serif;
-            }
-        }
+  font-size: 14px;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-top: 58px;
+  margin-bottom: 60px;
+  &__label {
+    padding-left: 15px;
+    line-height: 0.5;
+    color: #54585a;
+    &--items {
+      display: block;
+      height: 45px;
+      width: 400px;
+      margin: 15px 15px 20px 0px;
+      padding-left: 15px;
+      &::placeholder {
+        font-family: "Open Sans", sans-serif;
+      }
+      @media all and (min-width: 768px) {
+        width: 65vw;
+      }
     }
-    .button {
-        background-color: #099d8d;
-        font-family: "Rubik", sans-serif;
-        font-size: 16px;
-        text-transform: uppercase;
-        border-radius: 5px;
-        border-color: #099d8d;
-        border: 0;
-        color: white;
-        width: 420px;
-        height: 45px;
+    &--items1 {
+      display: block;
+      height: 105px;
+      width: 400px;
+      margin: 15px 15px 15px 0px;
+      padding-left: 15px;
+      padding-top: 11px;
+      &::placeholder {
+        font-family: "Open Sans", sans-serif;
+      }
+      @media all and (min-width: 768px) {
+        width: 65vw;
+      }
     }
+  }
+  .button {
+    background-color: #099d8d;
+    font-family: "Rubik", sans-serif;
+    font-size: 16px;
+    text-transform: uppercase;
+    border-radius: 5px;
+    border-color: #099d8d;
+    border: 0;
+    color: white;
+    width: 420px;
+    height: 45px;
+    @media all and (min-width: 768px) {
+      width: 206px;
+    }
+  }
+  &__container--button {
+    width: 65vw;
+    @media all and (min-width: 768px) {
+      display: flex;
+      justify-content: flex-end;
+      margin-right: -18px;
+    }
+  }
 }
