responsive desktop grid row

--- a/src/html/partials/form.html
+++ b/src/html/partials/form.html
@@ -38,30 +38,30 @@
           name="fullName"
           required
       /></label>
+      <div class="formulario__etel">
+        <!--correo-->
+        <label for="emailAddress" class="formulario__label" id="email"
+          >Email <span class="asterisk">*</span>
+          <input
+            class="formulario__label--items"
+            placeholder="nombre@gmail.com"
+            type="email"
+            id="emailAddress"
+            name="emailAddress"
+            required
+        /></label>
 
-      <!--correo-->
-      <label for="emailAddress" class="formulario__label"
-        >Email <span class="asterisk">*</span>
-        <input
-          class="formulario__label--items"
-          placeholder="nombre@gmail.com"
-          type="email"
-          id="emailAddress"
-          name="emailAddress"
-          required
-      /></label>
-
-      <!--telefono-->
-      <label for="telephone" class="formulario__label"
-        >Teléfono
-        <input
-          class="formulario__label--items"
-          placeholder="Ej. 123456789"
-          type="tel"
-          id="telephone"
-          name="telephone"
-      /></label>
-
+        <!--telefono-->
+        <label for="telephone" class="formulario__label" id="tel"
+          >Teléfono
+          <input
+            class="formulario__label--items"
+            placeholder="Ej. 123456789"
+            type="tel"
+            id="telephone"
+            name="telephone"
+        /></label>
+      </div>
       <!--mensaje-->
       <label for="comments" class="formulario__label"
         >Mensaje <span class="asterisk">*</span>
