mobile etel and tablet etel fixed

--- a/src/html/partials/form.html
+++ b/src/html/partials/form.html
@@ -7,7 +7,8 @@
     Email  placeholder nombre.apellidos@mail.com
     Teléfono  placeholder Ej: 123456789
     Mensaje placeholder ¿Qué necesitas?
-    Enviar -->
+    Enviar 
+  -->
 <main>
   <!--SECCION CONTACTO-->
   <section class="contact">
