--- a/src/scss/layout/_form.scss
+++ b/src/scss/layout/_form.scss
@@ -12,6 +12,7 @@ main {
   text-align: center;
   line-height: 24px;
   margin-top: 30px;
+  max-width: 65vw;
   h2 {
     font-family: "Rubik", sans-serif;
     font-weight: bold;
