--- a/src/scss/layout/_form.scss
+++ b/src/scss/layout/_form.scss
@@ -13,6 +13,12 @@ main {
   line-height: 24px;
   margin-top: 30px;
   max-width: 65vw;
+  @media all and (min-width: 768px) {
+    max-width: 65vw;
+  }
+  @media all and (min-width: 1200px) {
+    max-width: 65vw;
+  }
   h2 {
     font-family: "Rubik", sans-serif;
     font-weight: bold;
