--- a/src/scss/layout/_team.scss
+++ b/src/scss/layout/_team.scss
@@ -49,12 +49,11 @@
 
 .cuadrado {
   background-color: white;
-  z-index: 999;
-  width: 40px;
-  height: 40px;
+  width: 35px;
+  height: 35px;
   position: relative;
-  transform: rotate(45deg);
-  bottom: -22px;
+  transform: translate(0, 10px) rotate(45deg);
+  margin: auto;
 }
 
 /************************************fortaleza y debilidades ***************/
