--- a/src/scss/layout/_form.scss
+++ b/src/scss/layout/_form.scss
@@ -54,7 +54,7 @@ main {
 
 .formulario {
   font-size: 14px;
-  width: 100%;
+  width: 65vw;
   height: 100%;
   display: flex;
   flex-direction: column;
@@ -63,6 +63,13 @@ main {
   margin-bottom: 60px;
   &__etel {
     margin-left: 16px;
+  }
+  @media all and (min-width: 768px) {
+    &__etel {
+      width: 100%;
+      display: grid;
+      grid-template-columns: 2fr 1fr;
+    }
   }
   @media all and (min-width: 1200px) {
     &__etel {
