add new photos in whoweare

--- a/src/scss/layout/_whoweare.scss
+++ b/src/scss/layout/_whoweare.scss
@@ -71,8 +71,7 @@
     margin-top: 30px;
 
     @media all and (min-width: 678px) {
-      margin-left: 3em;
-      margin-right: 4em;
+      padding-left: 50px;
     }
   }
   .wwa-parrafo {
@@ -153,8 +152,7 @@
 
     margin-top: 30px;
     @media all and (min-width: 678px) {
-      margin-left: 3em;
-      margin-right: 4em;
+      padding-right: 50px;
     }
   }
   .wwa-parrafo {
