--- a/src/scss/layout/_whoweare.scss
+++ b/src/scss/layout/_whoweare.scss
@@ -2,7 +2,7 @@
   background: white;
   font-family: "Open Sans", sans-serif;
   font-size: 16px;
-  margin: auto;
+  // margin: auto;
   max-width: 600px;
   padding: 10px;
   text-align: center;
@@ -11,10 +11,7 @@
   justify-content: center;
   align-items: center;
 }
-@media all and (min-width: 678px) {
-  .whoweare {
-    max-width: 100vw;
-  }
+@media all and (min-width: 768px) {
 }
 .whoweare h2 {
   font-family: "Rubik", sans-serif;
@@ -29,11 +26,9 @@
 }
 
 .adalaber-impar {
-  @media all and (min-width: 678px) {
+  @media all and (min-width: 768px) {
     display: flex;
     flex-direction: row;
-    margin-right: 12vw;
-    margin-left: 12vw;
   }
 
   .image-adalaber {
