--- a/src/scss/layout/_team.scss
+++ b/src/scss/layout/_team.scss
@@ -11,7 +11,8 @@
   line-height: 1.5;
   position: relative;
   bottom: 50px;
-  margin-top: -10px;
+  margin-top: -50px;
+  margin-bottom: 50px;
   padding: 5px;
   text-align: center;
 }
@@ -38,7 +39,6 @@
   font-weight: 600;
   margin-top: -50px;
 }
-
 
 .equipo-parrafo {
   color: #54585a;
